2012-06-14  v1.1  r?
------------------------------------------------------------------------

  * Ensure that calling close() on a file descriptor will remove any 
    knotes that reference the descriptor.
    Thanks to Eric Radman for reporting this bug.

  * Disable thread cancellation while running kqueue() and kevent().

  * Fix a race condition in kevent_wait() by holding the kqueue lock
    for the duration of the kevent() function call. To avoid going to
    sleep with the lock, it is dropped temporarily before calling 
    pselect() or similar system calls.
    Thanks to Eric Wong for reporting this bug.

  * Fix signal handling by returning EINTR from kevent() instead of
    silently ignoring the signal.

  * Fix: attempting to trigger identical events will corrupt the TAILQ
    structure and lead to a segfault. 
    Thanks to Eric Wong for reporting this bug and providing a patch.

2012-04-19  v1.0.6  r539
------------------------------------------------------------------------

  * Do not check if an unsigned integer is less than zero.
  
  * Prevent truncation of the `ident' argument by knote_lookup().
    Backport of r524 from the trunk.
    Thanks to Eric Wong for reporting this bug.

2012-02-09  v1.0.5  r534
------------------------------------------------------------------------

  * Fix a crash in kevent() if an invalid kqueue descriptor is provided.
    Thanks to James William Pye for reporting this bug.
  * Backport kevent_test() to check for a bad kqueue descriptor.
  * Support multiarch header locations in Debian.

2011-07-13  v1.0.4  r530
------------------------------------------------------------------------

  * Revert the change to use /usr/lib64 on 64-bit hosts because it breaks
    on Debian.

2011-07-09  v1.0.3  r529
------------------------------------------------------------------------

  * Don't allow the user to override essential CFLAGS such as -fpic
  * Add _BSD_SOURCE to CFLAGS

2011-03-24  v1.0.2  r462