@@ -173,10 +173,13 @@ int __attribute__((visibility("default")))
 kqueue(void)
 {
     struct kqueue *kq;
-    int tmp, cancelstate;
+    int tmp;
 
+#ifndef ANDROID
+    int cancelstate;
     if (pthread_setcancelstate(PTHREAD_CANCEL_DISABLE, &cancelstate) != 0)
         return (-1);
+#endif
 
     kq = calloc(1, sizeof(*kq));
     if (kq == NULL)
@@ -206,7 +209,9 @@ kqueue(void)
     pthread_rwlock_unlock(&kqtree_mtx);
 
     dbg_printf("created kqueue, fd=%d", kq->kq_sockfd[1]);
+#ifndef ANDROID
     (void) pthread_setcancelstate(cancelstate, NULL);
+#endif
 
     return (kq->kq_sockfd[1]);
 
@@ -225,6 +230,8 @@ errout_unlocked:
 	close(kq->kq_port);
 #endif
     free(kq);
+#ifndef ANDROID
     (void) pthread_setcancelstate(cancelstate, NULL);
+#endif
     return (-1);
 }
